# chotot-miner

./: .gitignore  Dockerfile  Makefile  output.json  output.tsv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
cli/: pyproject.toml
cli/src/chotot_miner_cli/: __init__.py  data.py  listing.py  main.py  output.py  scraper.py
scripts/: sqlite_json.sh
shared/: pyproject.toml
shared/src/chotot_miner_shared/: __init__.py
