[project]
name = "chotot-miner"
version = "0.1.0"
description = "Chotot Miner - A web scraping and data mining CLI tool for Chotot.vn"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
chotot-miner-cli = { workspace = true }

[tool.uv.workspace]
members = ["cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "chotot-miner-cli",
]
package = false
