[project]
name = "chotot-miner-shared"
version = "0.1.0"
description = "Shared models and utilities"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chotot_miner_shared"]
